--- a/bwc-config.cmake.in
+++ b/bwc-config.cmake.in
@@ -1,12 +1,53 @@
-# - Config file for the bwc package
-#
-# It defines the following variables
-#  BWC_INCLUDE_DIRS - include directories for bwc
-#  BWC_LIBRARIES    - libraries to link against
-#
-# And the following imported targets:
-#   bwc::bwclib
-
+#*================================================================================================*#
+#|                                                                                                |#
+#|       /$$$$$$$  /$$                  /$$      /$$ /$$                                          |#
+#|      | $$__  $$|__/                 | $$  /$ | $$| $$                                          |#
+#|      | $$  \ $$ /$$  /$$$$$$        | $$ /$$$| $$| $$$$$$$   /$$$$$$   /$$$$$$   /$$$$$$       |#
+#|      | $$$$$$$ | $$ /$$__  $$       | $$/$$ $$ $$| $$__  $$ /$$__  $$ /$$__  $$ /$$__  $$      |#
+#|      | $$__  $$| $$| $$  \ $$       | $$$$_  $$$$| $$  \ $$| $$  \ $$| $$  \ $$| $$  \ $$      |#
+#|      | $$  \ $$| $$| $$  | $$       | $$$/ \  $$$| $$  | $$| $$  | $$| $$  | $$| $$  | $$      |#
+#|      | $$$$$$$/| $$|  $$$$$$$       | $$/   \  $$| $$  | $$|  $$$$$$/|  $$$$$$/| $$$$$$$/      |#
+#|      |_______/ |__/ \____  $$       |__/     \__/|__/  |__/ \______/  \______/ | $$____/       |#
+#|                     /$$  \ $$                                                  | $$            |#
+#|                    |  $$$$$$/                                                  | $$            |#
+#|                     \______/                                                   |__/            |#
+#|                                                                                                |#
+#|  DESCRIPTION:                                                                                  |#
+#|  ------------                                                                                  |#
+#|                                                                                                |#
+#|        Config file for the bwc package defining the following variables:                       |#
+#|                                                                                                |#
+#|                BWC_INCLUDE_DIRS - include directories for bwc,                                 |#
+#|                BWC_LIBRARIES    - libraries to link against,                                   |#
+#|                                                                                                |#
+#|        and the following imported targets:                                                     |#
+#|                                                                                                |#
+#|                bwc::bwclib                                                                     |#
+#|                                                                                                |#
+#|  --------------------------------------------------------------------------------------------  |#
+#|  Copyright (c) 2023, High Performance Computing Center - University of Stuttgart               |#
+#|                                                                                                |#
+#|  Redistribution and use in source and binary forms, with or without modification, are          |#
+#|  permitted provided that the following conditions are met:                                     |#
+#|                                                                                                |#
+#|     (1)   Redistributions of source code must retain the above copyright notice, this list of  |#
+#|           conditions and the following disclaimer.                                             |#
+#|                                                                                                |#
+#|     (2)   Redistributions in binary form must reproduce the above copyright notice, this list  |#
+#|           of conditions and the following disclaimer in the documentation and/or other         |#
+#|           materials provided with the distribution.                                            |#
+#|                                                                                                |#
+#|  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS IS” AND ANY EXPRESS   |#
+#|  OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF               |#
+#|  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE    |#
+#|  COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,     |#
+#|  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF            |#
+#|  SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)        |#
+#|  HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR      |#
+#|  TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,  |#
+#|  EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.                                            |#
+#|                                                                                                |#
+#*================================================================================================*#
 include("${CMAKE_CURRENT_LIST_DIR}/bwc-config-version.cmake")
 
 include(FindPackageHandleStandardArgs)
