--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,7 +131,7 @@ message(STATUS "Compiling with C++ standard: ${CMAKE_CXX_STANDARD}")
 # Check if the OpenMP package is available for the current #
 # setup and set the appropriate C/C++ flags.               #
 #----------------------------------------------------------#
-if("${CMAKE_BUILD_TYPE}" STREQUAL "Release" OR ${OMP})
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Release" OR "${OMP}")
   message(STATUS "Enable OpenMP parallelization")
  find_package(OpenMP)
  if (OPENMP_FOUND)
