Removed duplicate compiler flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ endif()
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
   set(BWC_DEBUG_FLAGS "-Wall")
   if(NOT MSVC)
-    set(BWC_DEBUG_FLAGS "${BWC_DEBUG_FLAGS} -Wall -Wextra")
+    set(BWC_DEBUG_FLAGS "${BWC_DEBUG_FLAGS} -Wextra")
   endif()
   set(CMAKE_C_FLAGS    "${CMAKE_C_FLAGS} ${BWC_DEBUG_FLAGS}")
   set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${BWC_DEBUG_FLAGS}")
